# stock-tech-candlestick

./: .audit_cache.json  .flake8  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  CONTRIBUTING.MD  Dockerfile  README.md  TODO (1).md  bump_version.py  compile.out  index.html  mkdocs.yml  objects.inv  pip-audit.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: labeler.yaml
.github/workflows/: Build and Push Docker Image.yml  Dependency Security Audit.yml  Pytest Testing.yml  Security Scan.yml  auto-assign.yml  bandit.yml  build docker image.yml  bump-version.yml  ci.yml  dependabot.yml  deploy-helm.y  deploy-k8s.y  docker-build.yml  documentation.yml  greetings.yml  labeler.yml  lint.yml  stale.yml  static-analysis.yml  testing.yml
api/: index.html
argocd/stock-tech-candlestick/: application.yaml
charts/stock-tech-candlestick/: Chart.yaml  values.yaml
charts/stock-tech-candlestick/templates/: deployment.yaml
docs/source/: app.rst  index.rst
helm/: chart.yaml  values-dev.yaml  values.yml
helm/templates/: argocd-application.yaml  deployment.yaml  service.yaml
k8s/: argocd-application.yaml  deployment.yaml  service.yaml
k8s/application/: application.yaml
k8s/base/: service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/stock-tech-candlestick/: deployment.yaml  service.yaml
more-details/: index.html
other-topic/: index.html
src/app/: config.py  main.py  output_handler.py  processor.py  queue_handler.py  queue_sender.py
tests/: test_main.py  test_processor.py
