[metadata]
name = stock-tech-candlestick
version = 0.1.0
description = A Python project for candlestick pattern analysis with CI/CD workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Quinn
author_email = mobious_99@yahoo.com
license = MIT
license_files = LICENSE
url = https://github.com/your-username/stock-tech-candlestick
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = python, stock analysis, candlestick, trading, CI/CD, workflows

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.28.0
    numpy>=1.21.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = src  # Assumes your package is inside 'src/' directory

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    flake8>=4.0
    black>=22.0
    mypy>=1.0
    sphinx>=4.0
    sphinx-rtd-theme>=1.0
    bandit>=1.7
    safety>=2.4
docs =
    sphinx>=4.0
    sphinx-rtd-theme>=1.0
test =
    pytest>=7.0
    pytest-cov>=4.0

[options.entry_points]
console_scripts =
    stock-tech-candlestick = stock_tech_candlestick.main:main  

[options.package_data]
* =
    data/*.txt
    templates/*.html

[tool:pytest]
addopts = --cov=stock_tech_candlestick --cov-report=term
testpaths = tests

[flake8]
max-line-length = 88
exclude = .git,__pycache__,docs/conf.py,old,build,dist

[mypy]
ignore_missing_imports = True
strict = True

[xenon]
max-absolute = B
max-modules = A
max-average = A
